Ensure KCM load function is called only once

Below bug was caused by Kamera KCM load function being called many
times. Since there is no way to check whether the KCM load function
succedded, we use `firstShow` to tell that we called it.

Of course, it could be interesting to avoid deadlock in Kamera KCM as
well.

BUG: 487388